Compucom CCQA/src/objects/Contract_LineItem__c.object
<CustomObject>
    <fields>
        <fullName>BSLA_Number__c</fullName>
        <label>BSLA #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSLA__c</fullName>
        <label>BSLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Level1__c</fullName>
        <label>BU Level1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Level2__c</fullName>
        <label>BU Level2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Description__c</fullName>
        <label>Cost Center Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Contract__c</fullName>
        <label>FCST Contract</label>
        <referenceTo>FCST_Contract__c</referenceTo>
        <relationshipLabel>Contract LineItems</relationshipLabel>
        <relationshipName>Contract_LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FCST_Fiscal_Year_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCST Fiscal Year List</label>
        <referenceTo>Fiscal_Year_Planning__c</referenceTo>
        <relationshipLabel>Contract LineItems</relationshipLabel>
        <relationshipName>Contract_LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCST_Q__c</fullName>
        <formula>FCST_Contract__r.FCST_Q__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCST Q#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Geo_Code__c</fullName>
        <formula>FCST_Contract__r.Fcst_Geo_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fcst Geo Code(UNUSED)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fcst_Revenue_Type__c</fullName>
        <label>Fcst Revenue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Geo_Name__c</fullName>
        <formula>FCST_Contract__r.Fcst_Geo_Numbers__c+&apos; &apos;+ FCST_Contract__r.Fcst_Geo_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geo# &amp; Geo Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hyperion_Revenue_Type__c</fullName>
        <formula>IF(Fcst_Revenue_Type__c=&apos;Prod - Enterprise&apos;, &apos;Gross Sales-Enterprise Hardware&apos;,  IF(Fcst_Revenue_Type__c=&apos;Prod - Commodity&apos;, &apos;Gross Sales-Commodity Hardware&apos;,  IF(Fcst_Revenue_Type__c=&apos;Annuity&apos;, &apos;ITO Annuity Revenue&apos;,  IF(Fcst_Revenue_Type__c=&apos;Project&apos;, &apos;ITO Project Revenue&apos;, Fcst_Revenue_Type__c)   )   )   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hyperion Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Factor__c</fullName>
        <label>Risk Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Contract LineItem</label>
    <nameField>
        <displayFormat>CLI-{0000}</displayFormat>
        <label>Contract LineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>